<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bartek.mobapp.activities.LoginActivity"
    android:background="@color/windowBackground"

    >

    <TextView
        android:text="@string/LoginAct_welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvLogin"
        android:textColor="@color/regularText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailSubject"
        android:ems="10"
        android:layout_below="@+id/tvLogin"
        android:layout_centerHorizontal="true"
        android:id="@+id/etLogin"
        android:hint="@string/LoginAct_Login_hint"
        android:textColor="@color/regularText"
        android:textColorHint="@color/hintText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@id/etLogin"
        android:layout_centerHorizontal="true"
        android:id="@+id/etConfirmPassword"
        android:hint="@string/LoginAct_password_hint"
        android:textColor="@color/regularText"
        android:textColorHint="@color/hintText" />

    <Button
        android:text="@string/LoginAct_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etConfirmPassword"
        android:layout_centerHorizontal="true"
        android:id="@+id/bLogin" />

    <TextView
        android:text="@string/LoginAct_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bLogin"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvRegisterHere"
        android:textAlignment="center"
        android:textColor="@color/regularText"
        android:textColorHint="@color/hintText"/>

    <CheckBox
        android:text="@string/LoginAct_onlineLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRegisterHere"
        android:layout_alignParentStart="true"
        android:id="@+id/cbOnlineLogin"
        android:textColor="@color/regularText"
        android:button="?android:attr/listChoiceIndicatorMultiple"
        android:buttonTint="@color/regularText"/>

</RelativeLayout>
