<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bartek.loginregister.RegisterActivity"
    android:background="@color/windowBackground"
    >


    <Button
        android:text="@string/back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bBackToLogin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:id="@+id/etNick"
        android:layout_below="@+id/bBackToLogin"
        android:selectAllOnFocus="false"
        android:hint="@string/RegisterAct_login_hint"
        android:textColor="@color/regularText"
        android:textColorHint="@color/hintText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/etNick"
        android:layout_centerHorizontal="true"
        android:id="@+id/etEmail"
        android:hint="@string/RegisterAct_email_hint"
        android:textColor="@color/regularText"
        android:textColorHint="@color/hintText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/etEmail"
        android:layout_centerHorizontal="true"
        android:id="@+id/etConfirmPassword"
        android:hint="@string/RegisterAct_password_hint"
        android:textColor="@color/regularText"
        android:textColorHint="@color/hintText" />

    <Button
        android:text="@string/RegisterAct_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasswordRe"
        android:layout_centerHorizontal="true"
        android:id="@+id/bRegister" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPasswordRe"
        android:hint="@string/RegisterAct_passwordRe_hint"
        android:textColor="@color/regularText"
        android:textColorHint="@color/hintText"
        android:layout_below="@+id/etConfirmPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
