<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bartek.mobapp.activities.EdittingActivity"
    android:background="@color/windowBackground"
    >

    <Button
        android:text="@string/back_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bBackToMain"
        android:textSize="14sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/synchro_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_below="@+id/bBackToMain"
        android:textColor="@color/regularText"
        android:textSize="18sp" />

    <Button
        android:text="@string/sync_with_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bSyncData"
        android:elevation="5dp"
        style="@android:style/Widget.Button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp" />

    <TextView
        android:text="@string/confirm_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textColor="@color/regularText"
        android:layout_below="@+id/bSyncData"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@id/textView8"
        android:layout_centerHorizontal="true"
        android:id="@+id/etConfirmPassword"
        android:hint="@string/LoginAct_password_hint"
        android:textColor="@color/regularText"
        android:textColorHint="@color/hintText" />

</RelativeLayout>
