<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bartek.loginregister.EditDataActivity"
    android:background="@color/windowBackground"
    >
    <!--android:background="@color/windowBackground"-->

    <Button
        android:text="@string/back_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bBackToMain"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@android:style/Widget.Button" />


    <TextView
        android:text="@string/trade_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_below="@+id/bBackToMain"
        android:textColor="@color/regularText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/etCreateWare"
        android:textColor="@color/regularText"
        android:hint="@string/trade_name"
        android:textColorHint="@color/hintText"/>

    <TextView
        android:text="@string/storeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCreateWare"
        android:id="@+id/textView5"
        android:textColor="@color/regularText" />

    <TextView
        android:text="@string/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCreateStore"
        android:id="@+id/textView6"
        android:textColor="@color/regularText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etCreatePrice"
        android:textColor="@color/regularText"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/price"
        android:textColorHint="@color/hintText"/>

    <Button
        android:text="Zatwierdź zmiany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCreatePrice"
        android:layout_centerHorizontal="true"
        android:id="@+id/bCreateRow"
        android:elevation="5dp"
        style="@android:style/Widget.Button" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etCreateStore"
        android:textColor="@color/regularText"
        android:hint="@string/storeName"
        android:textColorHint="@color/hintText"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>