<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bartek.mobapp.activities.EdittingActivity"
    android:background="@color/windowBackground"
    >
    <!--android:background="@color/windowBackground"-->


    <TextView
        android:text="@string/trade_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_below="@+id/bBackToMain"
        android:textColor="@color/regularText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:ems="10"
        android:layout_below="@+id/textView"
        android:textSize="18dp"
        android:layout_alignParentStart="true"
        android:id="@+id/etNameCreate"
        android:textColor="@color/regularText"/>

    <TextView
        android:text="@string/storeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNameCreate"
        android:id="@+id/textView5"
        android:textColor="@color/regularText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etStoreNameCreate"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:textColor="@color/regularText"
        android:hint="@string/storeName"
        android:textColorHint="@color/hintText"/>

    <TextView
        android:text="@string/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etStoreNameCreate"
        android:id="@+id/textView6"
        android:textColor="@color/regularText" />

    <TextView
        android:text="@string/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPriceCreate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView7"
        android:textColor="@color/regularText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:ems="10"
        android:layout_below="@+id/textView7"
        android:textSize="18dp"
        android:layout_alignParentStart="true"
        android:id="@+id/tvAmountCreate"
        android:textColor="@color/regularText"
        />

    <Button
        android:text="Zatwierdź zmiany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAmountCreate"
        android:layout_centerHorizontal="true"
        android:id="@+id/bSubmitChanges"
        android:elevation="5dp"
        style="@android:style/Widget.Button" />

    <Button
        android:text="Skasuj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:id="@+id/bDelete" />

    <Button
        android:text="@string/back_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bBackToMain"
        style="@android:style/Widget.Button"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/arrow_down_float"
        android:id="@+id/bSubUnit"
        android:layout_below="@+id/bAddUnit"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/arrow_up_float"
        android:id="@+id/bAddUnit"
        android:layout_below="@+id/bSubmitChanges"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etPriceCreate"
        android:textColor="@color/regularText"
        android:hint="@string/price"
        android:textColorHint="@color/hintText"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/bDelete" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:ems="10"
        android:textSize="18dp"
        android:id="@+id/tvUnitIncr"
        android:textColor="@color/regularText"
        android:layout_below="@+id/bSubUnit"
        android:layout_alignParentStart="true" />

</RelativeLayout>
